fixed play button styling on safari

--- a/src/App.css
+++ b/src/App.css
@@ -165,3 +165,10 @@ body {
 .square-red {
 	background-color: red;
 }
+
+:focus {
+	outline: none;
+}
+::-moz-focus-inner {
+	border: 0;
+}
